y.output
   0  $accept : program $end

   1  program : program var_decl
   2          |

   3  var_decl : scalar_decl
   4           | array_decl

   5  scalar_decl : var_type init_list ';'

   6  var_type : INT
   7           | FLOAT
   8           | DOUBLE
   9           | CHAR

  10  init_list : init_unit
  11            | init_list ',' init_unit

  12  init_unit : ID
  13            | ID '=' expr

  14  expr : expr '+' expr
  15       | expr '-' expr
  16       | expr '*' expr
  17       | expr '/' expr
  18       | expr '%' expr
  19       | expr '<' expr
  20       | expr LESS_EQ expr
  21       | expr '>' expr
  22       | expr GREAT_EQ expr
  23       | expr EQUAL expr
  24       | expr NOT_EQ expr
  25       | expr LOG_AND expr
  26       | expr LOG_OR expr
  27       | expr '&' expr
  28       | expr '|' expr
  29       | '!' expr
  30       | '(' expr ')'
  31       | '+' expr
  32       | '-' expr
  33       | INCRE ID
  34       | INCRE id_arr_access
  35       | ID INCRE
  36       | id_arr_access INCRE
  37       | DECRE ID
  38       | DECRE id_arr_access
  39       | ID DECRE
  40       | id_arr_access DECRE
  41       | ID '=' expr
  42       | id_arr_access '=' expr
  43       | func_invoc
  44       | ID
  45       | id_arr_access
  46       | literal

  47  id_arr_access : ID access_list

  48  access_list : access_list '[' expr ']'
  49              | '[' expr ']'

  50  func_invoc : ID '(' param_list ')'

  51  param_list : param_list ',' expr
  52             | expr
  53             |

  54  literal : NUM_INT
  55          | NUM_FLOATING
  56          | CHARACTER
  57          | STRING

  58  array_decl : var_type init_list_arr ';'

  59  init_list_arr : init_unit_arr
  60                | init_list_arr ',' init_unit_arr

  61  init_unit_arr : id_arr_decl
  62                | id_arr_decl '=' arr_content

  63  id_arr_decl : ID arr_decl_list

  64  arr_decl_list : arr_decl_list '[' NUM_INT ']'
  65                | '[' NUM_INT ']'

  66  arr_content : '{' expr_list '}'
  67              | '{' arr_content_list '}'

  68  expr_list : expr
  69            | expr_list ',' expr

  70  arr_content_list : arr_content
  71                   | arr_content_list ',' arr_content

state 0
	$accept : . program $end  (0)
	program : .  (2)

	.  reduce 2

	program  goto 1


state 1
	$accept : program . $end  (0)
	program : program . var_decl  (1)

	$end  accept
	INT  shift 2
	FLOAT  shift 3
	CHAR  shift 4
	DOUBLE  shift 5
	.  error

	var_decl  goto 6
	scalar_decl  goto 7
	var_type  goto 8
	array_decl  goto 9


state 2
	var_type : INT .  (6)

	.  reduce 6


state 3
	var_type : FLOAT .  (7)

	.  reduce 7


state 4
	var_type : CHAR .  (9)

	.  reduce 9


state 5
	var_type : DOUBLE .  (8)

	.  reduce 8


state 6
	program : program var_decl .  (1)

	.  reduce 1


state 7
	var_decl : scalar_decl .  (3)

	.  reduce 3


state 8
	scalar_decl : var_type . init_list ';'  (5)
	array_decl : var_type . init_list_arr ';'  (58)

	ID  shift 10
	.  error

	init_list  goto 11
	init_unit  goto 12
	init_list_arr  goto 13
	init_unit_arr  goto 14
	id_arr_decl  goto 15


state 9
	var_decl : array_decl .  (4)

	.  reduce 4


state 10
	init_unit : ID .  (12)
	init_unit : ID . '=' expr  (13)
	id_arr_decl : ID . arr_decl_list  (63)

	'['  shift 16
	'='  shift 17
	';'  reduce 12
	','  reduce 12

	arr_decl_list  goto 18


state 11
	scalar_decl : var_type init_list . ';'  (5)
	init_list : init_list . ',' init_unit  (11)

	';'  shift 19
	','  shift 20
	.  error


state 12
	init_list : init_unit .  (10)

	.  reduce 10


state 13
	array_decl : var_type init_list_arr . ';'  (58)
	init_list_arr : init_list_arr . ',' init_unit_arr  (60)

	';'  shift 21
	','  shift 22
	.  error


state 14
	init_list_arr : init_unit_arr .  (59)

	.  reduce 59


state 15
	init_unit_arr : id_arr_decl .  (61)
	init_unit_arr : id_arr_decl . '=' arr_content  (62)

	'='  shift 23
	';'  reduce 61
	','  reduce 61


state 16
	arr_decl_list : '[' . NUM_INT ']'  (65)

	NUM_INT  shift 24
	.  error


state 17
	init_unit : ID '=' . expr  (13)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 36
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 18
	id_arr_decl : ID arr_decl_list .  (63)
	arr_decl_list : arr_decl_list . '[' NUM_INT ']'  (64)

	'['  shift 40
	';'  reduce 63
	','  reduce 63
	'='  reduce 63


state 19
	scalar_decl : var_type init_list ';' .  (5)

	.  reduce 5


state 20
	init_list : init_list ',' . init_unit  (11)

	ID  shift 41
	.  error

	init_unit  goto 42


state 21
	array_decl : var_type init_list_arr ';' .  (58)

	.  reduce 58


state 22
	init_list_arr : init_list_arr ',' . init_unit_arr  (60)

	ID  shift 43
	.  error

	init_unit_arr  goto 44
	id_arr_decl  goto 15


state 23
	init_unit_arr : id_arr_decl '=' . arr_content  (62)

	'{'  shift 45
	.  error

	arr_content  goto 46


state 24
	arr_decl_list : '[' NUM_INT . ']'  (65)

	']'  shift 47
	.  error


state 25
	expr : INCRE . ID  (33)
	expr : INCRE . id_arr_access  (34)

	ID  shift 48
	.  error

	id_arr_access  goto 49


state 26
	expr : DECRE . ID  (37)
	expr : DECRE . id_arr_access  (38)

	ID  shift 50
	.  error

	id_arr_access  goto 51


state 27
	expr : '+' . expr  (31)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 52
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 28
	expr : '-' . expr  (32)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 53
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 29
	expr : '!' . expr  (29)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 54
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 30
	expr : '(' . expr ')'  (30)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 55
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 31
	expr : ID . INCRE  (35)
	expr : ID . DECRE  (39)
	expr : ID . '=' expr  (41)
	expr : ID .  (44)
	id_arr_access : ID . access_list  (47)
	func_invoc : ID . '(' param_list ')'  (50)

	INCRE  shift 56
	DECRE  shift 57
	'('  shift 58
	'['  shift 59
	'='  shift 60
	LESS_EQ  reduce 44
	GREAT_EQ  reduce 44
	EQUAL  reduce 44
	NOT_EQ  reduce 44
	LOG_AND  reduce 44
	LOG_OR  reduce 44
	'+'  reduce 44
	'-'  reduce 44
	'*'  reduce 44
	'/'  reduce 44
	'%'  reduce 44
	'<'  reduce 44
	'>'  reduce 44
	'&'  reduce 44
	'|'  reduce 44
	')'  reduce 44
	']'  reduce 44
	'}'  reduce 44
	';'  reduce 44
	','  reduce 44

	access_list  goto 61


state 32
	literal : NUM_INT .  (54)

	.  reduce 54


state 33
	literal : NUM_FLOATING .  (55)

	.  reduce 55


state 34
	literal : CHARACTER .  (56)

	.  reduce 56


state 35
	literal : STRING .  (57)

	.  reduce 57


state 36
	init_unit : ID '=' expr .  (13)
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . LESS_EQ expr  (20)
	expr : expr . '>' expr  (21)
	expr : expr . GREAT_EQ expr  (22)
	expr : expr . EQUAL expr  (23)
	expr : expr . NOT_EQ expr  (24)
	expr : expr . LOG_AND expr  (25)
	expr : expr . LOG_OR expr  (26)
	expr : expr . '&' expr  (27)
	expr : expr . '|' expr  (28)

	LESS_EQ  shift 62
	GREAT_EQ  shift 63
	EQUAL  shift 64
	NOT_EQ  shift 65
	LOG_AND  shift 66
	LOG_OR  shift 67
	'+'  shift 68
	'-'  shift 69
	'*'  shift 70
	'/'  shift 71
	'%'  shift 72
	'<'  shift 73
	'>'  shift 74
	'&'  shift 75
	'|'  shift 76
	';'  reduce 13
	','  reduce 13


state 37
	expr : id_arr_access . INCRE  (36)
	expr : id_arr_access . DECRE  (40)
	expr : id_arr_access . '=' expr  (42)
	expr : id_arr_access .  (45)

	INCRE  shift 77
	DECRE  shift 78
	'='  shift 79
	LESS_EQ  reduce 45
	GREAT_EQ  reduce 45
	EQUAL  reduce 45
	NOT_EQ  reduce 45
	LOG_AND  reduce 45
	LOG_OR  reduce 45
	'+'  reduce 45
	'-'  reduce 45
	'*'  reduce 45
	'/'  reduce 45
	'%'  reduce 45
	'<'  reduce 45
	'>'  reduce 45
	'&'  reduce 45
	'|'  reduce 45
	')'  reduce 45
	']'  reduce 45
	'}'  reduce 45
	';'  reduce 45
	','  reduce 45


state 38
	expr : func_invoc .  (43)

	.  reduce 43


state 39
	expr : literal .  (46)

	.  reduce 46


state 40
	arr_decl_list : arr_decl_list '[' . NUM_INT ']'  (64)

	NUM_INT  shift 80
	.  error


state 41
	init_unit : ID .  (12)
	init_unit : ID . '=' expr  (13)

	'='  shift 17
	';'  reduce 12
	','  reduce 12


state 42
	init_list : init_list ',' init_unit .  (11)

	.  reduce 11


state 43
	id_arr_decl : ID . arr_decl_list  (63)

	'['  shift 16
	.  error

	arr_decl_list  goto 18


state 44
	init_list_arr : init_list_arr ',' init_unit_arr .  (60)

	.  reduce 60


state 45
	arr_content : '{' . expr_list '}'  (66)
	arr_content : '{' . arr_content_list '}'  (67)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	'{'  shift 45
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 81
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39
	arr_content  goto 82
	expr_list  goto 83
	arr_content_list  goto 84


state 46
	init_unit_arr : id_arr_decl '=' arr_content .  (62)

	.  reduce 62


state 47
	arr_decl_list : '[' NUM_INT ']' .  (65)

	.  reduce 65


state 48
	expr : INCRE ID .  (33)
	id_arr_access : ID . access_list  (47)

	'['  shift 59
	LESS_EQ  reduce 33
	GREAT_EQ  reduce 33
	EQUAL  reduce 33
	NOT_EQ  reduce 33
	LOG_AND  reduce 33
	LOG_OR  reduce 33
	'+'  reduce 33
	'-'  reduce 33
	'*'  reduce 33
	'/'  reduce 33
	'%'  reduce 33
	'<'  reduce 33
	'>'  reduce 33
	'&'  reduce 33
	'|'  reduce 33
	')'  reduce 33
	']'  reduce 33
	'}'  reduce 33
	';'  reduce 33
	','  reduce 33

	access_list  goto 61


state 49
	expr : INCRE id_arr_access .  (34)

	.  reduce 34


state 50
	expr : DECRE ID .  (37)
	id_arr_access : ID . access_list  (47)

	'['  shift 59
	LESS_EQ  reduce 37
	GREAT_EQ  reduce 37
	EQUAL  reduce 37
	NOT_EQ  reduce 37
	LOG_AND  reduce 37
	LOG_OR  reduce 37
	'+'  reduce 37
	'-'  reduce 37
	'*'  reduce 37
	'/'  reduce 37
	'%'  reduce 37
	'<'  reduce 37
	'>'  reduce 37
	'&'  reduce 37
	'|'  reduce 37
	')'  reduce 37
	']'  reduce 37
	'}'  reduce 37
	';'  reduce 37
	','  reduce 37

	access_list  goto 61


state 51
	expr : DECRE id_arr_access .  (38)

	.  reduce 38


state 52
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . LESS_EQ expr  (20)
	expr : expr . '>' expr  (21)
	expr : expr . GREAT_EQ expr  (22)
	expr : expr . EQUAL expr  (23)
	expr : expr . NOT_EQ expr  (24)
	expr : expr . LOG_AND expr  (25)
	expr : expr . LOG_OR expr  (26)
	expr : expr . '&' expr  (27)
	expr : expr . '|' expr  (28)
	expr : '+' expr .  (31)

	.  reduce 31


state 53
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . LESS_EQ expr  (20)
	expr : expr . '>' expr  (21)
	expr : expr . GREAT_EQ expr  (22)
	expr : expr . EQUAL expr  (23)
	expr : expr . NOT_EQ expr  (24)
	expr : expr . LOG_AND expr  (25)
	expr : expr . LOG_OR expr  (26)
	expr : expr . '&' expr  (27)
	expr : expr . '|' expr  (28)
	expr : '-' expr .  (32)

	.  reduce 32


state 54
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . LESS_EQ expr  (20)
	expr : expr . '>' expr  (21)
	expr : expr . GREAT_EQ expr  (22)
	expr : expr . EQUAL expr  (23)
	expr : expr . NOT_EQ expr  (24)
	expr : expr . LOG_AND expr  (25)
	expr : expr . LOG_OR expr  (26)
	expr : expr . '&' expr  (27)
	expr : expr . '|' expr  (28)
	expr : '!' expr .  (29)

	.  reduce 29


state 55
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . LESS_EQ expr  (20)
	expr : expr . '>' expr  (21)
	expr : expr . GREAT_EQ expr  (22)
	expr : expr . EQUAL expr  (23)
	expr : expr . NOT_EQ expr  (24)
	expr : expr . LOG_AND expr  (25)
	expr : expr . LOG_OR expr  (26)
	expr : expr . '&' expr  (27)
	expr : expr . '|' expr  (28)
	expr : '(' expr . ')'  (30)

	LESS_EQ  shift 62
	GREAT_EQ  shift 63
	EQUAL  shift 64
	NOT_EQ  shift 65
	LOG_AND  shift 66
	LOG_OR  shift 67
	'+'  shift 68
	'-'  shift 69
	'*'  shift 70
	'/'  shift 71
	'%'  shift 72
	'<'  shift 73
	'>'  shift 74
	'&'  shift 75
	'|'  shift 76
	')'  shift 85
	.  error


state 56
	expr : ID INCRE .  (35)

	.  reduce 35


state 57
	expr : ID DECRE .  (39)

	.  reduce 39


state 58
	func_invoc : ID '(' . param_list ')'  (50)
	param_list : .  (53)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	')'  reduce 53
	','  reduce 53

	expr  goto 86
	id_arr_access  goto 37
	func_invoc  goto 38
	param_list  goto 87
	literal  goto 39


state 59
	access_list : '[' . expr ']'  (49)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 88
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 60
	expr : ID '=' . expr  (41)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 89
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 61
	id_arr_access : ID access_list .  (47)
	access_list : access_list . '[' expr ']'  (48)

	'['  shift 90
	INCRE  reduce 47
	DECRE  reduce 47
	LESS_EQ  reduce 47
	GREAT_EQ  reduce 47
	EQUAL  reduce 47
	NOT_EQ  reduce 47
	LOG_AND  reduce 47
	LOG_OR  reduce 47
	'+'  reduce 47
	'-'  reduce 47
	'*'  reduce 47
	'/'  reduce 47
	'%'  reduce 47
	'<'  reduce 47
	'>'  reduce 47
	'&'  reduce 47
	'|'  reduce 47
	')'  reduce 47
	']'  reduce 47
	'}'  reduce 47
	';'  reduce 47
	','  reduce 47
	'='  reduce 47


state 62
	expr : expr LESS_EQ . expr  (20)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 91
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 63
	expr : expr GREAT_EQ . expr  (22)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 92
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 64
	expr : expr EQUAL . expr  (23)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 93
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 65
	expr : expr NOT_EQ . expr  (24)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 94
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 66
	expr : expr LOG_AND . expr  (25)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 95
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 67
	expr : expr LOG_OR . expr  (26)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 96
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 68
	expr : expr '+' . expr  (14)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 97
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 69
	expr : expr '-' . expr  (15)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 98
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 70
	expr : expr '*' . expr  (16)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 99
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 71
	expr : expr '/' . expr  (17)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 100
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 72
	expr : expr '%' . expr  (18)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 101
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 73
	expr : expr '<' . expr  (19)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 102
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 74
	expr : expr '>' . expr  (21)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 103
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 75
	expr : expr '&' . expr  (27)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 104
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 76
	expr : expr '|' . expr  (28)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 105
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 77
	expr : id_arr_access INCRE .  (36)

	.  reduce 36


state 78
	expr : id_arr_access DECRE .  (40)

	.  reduce 40


state 79
	expr : id_arr_access '=' . expr  (42)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 106
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39


state 80
	arr_decl_list : arr_decl_list '[' NUM_INT . ']'  (64)

	']'  shift 107
	.  error


state 81
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . LESS_EQ expr  (20)
	expr : expr . '>' expr  (21)
	expr : expr . GREAT_EQ expr  (22)
	expr : expr . EQUAL expr  (23)
	expr : expr . NOT_EQ expr  (24)
	expr : expr . LOG_AND expr  (25)
	expr : expr . LOG_OR expr  (26)
	expr : expr . '&' expr  (27)
	expr : expr . '|' expr  (28)
	expr_list : expr .  (68)

	LESS_EQ  shift 62
	GREAT_EQ  shift 63
	EQUAL  shift 64
	NOT_EQ  shift 65
	LOG_AND  shift 66
	LOG_OR  shift 67
	'+'  shift 68
	'-'  shift 69
	'*'  shift 70
	'/'  shift 71
	'%'  shift 72
	'<'  shift 73
	'>'  shift 74
	'&'  shift 75
	'|'  shift 76
	'}'  reduce 68
	','  reduce 68


state 82
	arr_content_list : arr_content .  (70)

	.  reduce 70


state 83
	arr_content : '{' expr_list . '}'  (66)
	expr_list : expr_list . ',' expr  (69)

	'}'  shift 108
	','  shift 109
	.  error


state 84
	arr_content : '{' arr_content_list . '}'  (67)
	arr_content_list : arr_content_list . ',' arr_content  (71)

	'}'  shift 110
	','  shift 111
	.  error


state 85
	expr : '(' expr ')' .  (30)

	.  reduce 30


state 86
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . LESS_EQ expr  (20)
	expr : expr . '>' expr  (21)
	expr : expr . GREAT_EQ expr  (22)
	expr : expr . EQUAL expr  (23)
	expr : expr . NOT_EQ expr  (24)
	expr : expr . LOG_AND expr  (25)
	expr : expr . LOG_OR expr  (26)
	expr : expr . '&' expr  (27)
	expr : expr . '|' expr  (28)
	param_list : expr .  (52)

	LESS_EQ  shift 62
	GREAT_EQ  shift 63
	EQUAL  shift 64
	NOT_EQ  shift 65
	LOG_AND  shift 66
	LOG_OR  shift 67
	'+'  shift 68
	'-'  shift 69
	'*'  shift 70
	'/'  shift 71
	'%'  shift 72
	'<'  shift 73
	'>'  shift 74
	'&'  shift 75
	'|'  shift 76
	')'  reduce 52
	','  reduce 52


state 87
	func_invoc : ID '(' param_list . ')'  (50)
	param_list : param_list . ',' expr  (51)

	')'  shift 112
	','  shift 113
	.  error


state 88
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . LESS_EQ expr  (20)
	expr : expr . '>' expr  (21)
	expr : expr . GREAT_EQ expr  (22)
	expr : expr . EQUAL expr  (23)
	expr : expr . NOT_EQ expr  (24)
	expr : expr . LOG_AND expr  (25)
	expr : expr . LOG_OR expr  (26)
	expr : expr . '&' expr  (27)
	expr : expr . '|' expr  (28)
	access_list : '[' expr . ']'  (49)

	LESS_EQ  shift 62
	GREAT_EQ  shift 63
	EQUAL  shift 64
	NOT_EQ  shift 65
	LOG_AND  shift 66
	LOG_OR  shift 67
	'+'  shift 68
	'-'  shift 69
	'*'  shift 70
	'/'  shift 71
	'%'  shift 72
	'<'  shift 73
	'>'  shift 74
	'&'  shift 75
	'|'  shift 76
	']'  shift 114
	.  error


state 89
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . LESS_EQ expr  (20)
	expr : expr . '>' expr  (21)
	expr : expr . GREAT_EQ expr  (22)
	expr : expr . EQUAL expr  (23)
	expr : expr . NOT_EQ expr  (24)
	expr : expr . LOG_AND expr  (25)
	expr : expr . LOG_OR expr  (26)
	expr : expr . '&' expr  (27)
	expr : expr . '|' expr  (28)
	expr : ID '=' expr .  (41)

	LESS_EQ  shift 62
	GREAT_EQ  shift 63
	EQUAL  shift 64
	NOT_EQ  shift 65
	LOG_AND  shift 66
	LOG_OR  shift 67
	'+'  shift 68
	'-'  shift 69
	'*'  shift 70
	'/'  shift 71
	'%'  shift 72
	'<'  shift 73
	'>'  shift 74
	'&'  shift 75
	'|'  shift 76
	')'  reduce 41
	']'  reduce 41
	'}'  reduce 41
	';'  reduce 41
	','  reduce 41


state 90
	access_list : access_list '[' . expr ']'  (48)

	INCRE  shift 25
	DECRE  shift 26
	'+'  shift 27
	'-'  shift 28
	'!'  shift 29
	'('  shift 30
	ID  shift 31
	NUM_INT  shift 32
	NUM_FLOATING  shift 33
	CHARACTER  shift 34
	STRING  shift 35
	.  error

	expr  goto 115
	id_arr_access  goto 37
	func_invoc  goto 38
	literal  goto 39

